--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -14,93 +14,6 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="icon__navbar-mobie"><i class="fas fa-bars"></i></div>
-        <div class="header__logo">doo</div>
-        <div class="header__navbar">
-            <ul>
-                <li class="product-menu">
-                    <a href="">Sản phẩm</a>
-                    <div class="product__submenu">
-                        <div class="product__shirt">
-                            <h4>Ao</h4>
-                            <ul>
-                                <li><a href="">Áo Polo</a></li>
-                                <li><a href="">Áo Phong</a></li>
-                                <li><a href="">Áo Sơ Mi</a></li>
-                                <li><a href="">Áo Hoodie</a></li>
-                                <li><a href="">Áo Khoác</a></li>
-                                <li><a href="">Áo Vest</a></li>
-                            </ul>
-                        </div>
-                        <div class="trousers">
-                            <h4>Quần</h4>
-                            <ul>
-                                <li><a href="">Quần Âu</a></li>
-                                <li><a href="">Quần Jeans</a></li>
-                                <li><a href="">Quần Jogger</a></li>
-                                <li><a href="">Quần Kaki</a></li>
-                                <li><a href="">Quần Short</a></li>
-                            </ul>
-                        </div>
-                        <div class="accessories">
-                            <h4>Phụ kiện</h4>
-                            <ul>
-                                <li><a href="">Balo Túi Đeo Chéo</a></li>
-                                <li><a href="">Kính</a></li>
-                                <li><a href="">Mũ</a></li>
-                                <li><a href="">Ví Da</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <a href="">Khuyến mãi</a>
-                </li>
-                <li>
-                    <a href="">Dịch vụ</a>
-                </li>
-                <li>
-                    <a href="">Liên hệ</a>
-                </li>
-            </ul>
-        </div>
-        <div class="header__user-nav">
-
-            <a href="">
-                <div class="user-nav__search"><i class="fas fa-search"></i></div>
-            </a>
-            <a href="">
-                <div class="user-nav__account"><i class="fas fa-user"></i></div>
-            </a>
-            <a href="">
-                <div class="user-nav__cart"><i class="fas fa-shopping-cart"></i></div>
-            </a>
-        </div>
-
-        <div class="navbar__mobie">
-            <div class="navbar__mobie-user">
-                <a href="">
-                    <div class="user-nav__search"><i class="fas fa-search"></i></div>
-                </a>
-                <a href="">
-                    <div class="user-nav__account"><i class="fas fa-user"></i></div>
-                </a>
-                <a href="">
-                    <div class="user-nav__cart"><i class="fas fa-shopping-cart"></i></div>
-                </a>
-            </div>
-            <div class="navbar__mobie-extra">
-                <ul>
-                    <li>Trang chủ</li>
-                    <li>Sản phẩm</li>
-                    <li>Khuyến mãi</li>
-                    <li>Dịch vụ</li>
-                    <li>Liên Hệ</li>
-                </ul>
-            </div>
-        </div>
-    </div>
     <div class="main">
         <!-- start slider -->
         <div class="slider">
@@ -301,43 +214,7 @@
         </div>
         <!-- end selling product -->
     </div>
-    <div class="footer">
-        <div class="contact">
-            <div class='contact__title'>CONTACT DOOSHOP</div>
-            <div class="contach__icon">
-            </div>
-
-            <ul class="contact__somefor">
-                <li><i class="fas fa-map-marker-alt"></i> 160 Tôn Đức Thắng, Quận Đống Đa, Hà Nội</li>
-                <li><i class="fas fa-phone-square"></i> 0923939293</li>
-                <li><i class="fas fa-globe"></i><a href="" style="text-decoration: none;">  dooshop.com</a></li>
-                <li><i class="fas fa-envelope-square"></i> dooshop@gmail.com</li>
-            </ul>
-        </div>
-        <div class="list-address">
-            <h2 class="list-item__title">HỆ THỐNG CỦA HÀNG</h2>
-            <ul class="list_address-item">
-                <li>242 Thái Hà, Q.Đống Đa, HN</li>
-                <li>20 Dương Quảng Hàm, Q.Cầu Giấy, HN</li>
-                <li>11 Dương Quảng Hàm, Q.Cầu Giấy, HN</li>
-                <li>63 Đại Cổ Việt, Q.Hai Bà Trưng, HN</li>
-                <li>27 Chùa Bộc, Q.Đống Đa, HN</li>
-            </ul>
-        </div>
-        <div class="policy">
-            <div class="policy__title">CHÍNH SÁCH VÀ QUY ĐỊNH CHUNG</div>
-            <ul class="policy__list">
-                <li>Hướng dẫn mua hàng</li>
-                <li>Hình thức thanh toán</li>
-                <li>Quy định về bảo mật thông tin</li>
-                <li>Chính sách bảo hành</li>
-                <li>Chính sách đổi trả hàng</li>
-                <li>Chính sách vận chuyển</li>
-                <li>Giới thiệu</li>
-            </ul>
-        </div>
-    </div>
 </body>
-<script src="./home.js"></script>
+<script src="./js/home.js"></script>
 
 </html>
