--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,6 +12,8 @@
     <title>Home</title>
 </head>
 <body>
+    <header>{{>header}}</header>
     {{{body}}}
+    <footer>{{>footer}}</footer>
 </body>
 </html>
