--- a/src/public/css/home/home.css
+++ b/src/public/css/home/home.css
@@ -243,7 +243,7 @@ html {
     }
     /* navbar mobie */
     .navbar__mobie {
-        display: flex;
+        display: none;
         position: absolute;
         top: 60px;
         left: 0px;
