--- a/src/public/css/home/home.css
+++ b/src/public/css/home/home.css
@@ -239,7 +239,7 @@ html {
         flex-direction: column;
     }
     .footer>div {
-        padding: 8px 56px;
+        padding: 8px 56px !important;
     }
     /* navbar mobie */
     .navbar__mobie {
