--- a/src/public/css/home/home.css
+++ b/src/public/css/home/home.css
@@ -155,6 +155,8 @@ html {
     width: 270px;
     padding: 20px 20px 40px 20px;
     position: relative;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    margin: 1px;
 }
 
 .selling-product__container {
@@ -282,8 +284,8 @@ html {
         font-size: 1.8rem !important;
     }
     .selling-product__container>.selling-product__container-item {
-        width: 147px !important;
-        padding: 20px 20px 40px 20px;
+        width: 160px !important;
+        padding: 15px 10px 20px 10px;
         position: relative;
     }
     .desc__selling-item {
