--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -60,7 +60,7 @@
             <a href="">
                 <div class="user-nav__account"><i class="fas fa-user"></i></div>
             </a>
-            <a href="">
+            <a href="#">
                 <div class="user-nav__cart"><i class="fas fa-shopping-cart"></i></div>
             </a>
         </div>
