--- a/src/views/cart.hbs
+++ b/src/views/cart.hbs
@@ -43,19 +43,20 @@
             </div>
         </div>
         <div class="customer__info">
-            <form method="post" action="" class="form-order">
+            <form class="form-order">
                 <label for="nameUser">Họ và tên</label>
                 <input type="text" name="nameUser">
                 <label for="phoneNumber">Số điện thoại</label>
                 <input type="text" name="phoneNumber">
                 <label for="addressOrder">Địa chỉ nhận hàng</label>
                 <textarea name="addressOrder" cols="50" rows="10"></textarea>
-                <button type="submit">Xác nhận đặt hàng</button>
+                <button type="button" style="cursor: pointer">Xác nhận đặt hàng</button>
             </form>
 
         </div>
         <div class="done">
-
+            <p><i class="fas fa-calendar-check"></i>  Đặt hàng thành công</p>
+            <a href="http://localhost:4000"><i class="fas fa-long-arrow-alt-left"></i> Trở về trang chủ</a>
         </div>
     </div>
     <style>
